fix navbar overlapping header border

--- a/src/Assets/css/main.scss
+++ b/src/Assets/css/main.scss
@@ -103,7 +103,7 @@ header {
     position: relative;
     visibility: hidden;
     opacity: 0;
-    top: 43px;
+    top: 45px;
     background-color: $gray;
     height: 70px;
     overflow: hidden;
